--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <html>
-	<head>
-		<title>Lask_LK's Github HomePage!
-		</title>
+	<head> 
+	<title> Lask_LK ³¤Éú¾÷</title>
 	</head>
-	<body>
-	Lask_LK's Github HomePage!
+	<audio autoplay accesskey="k" controls loop src="wtf.mp3">
 	
-	</body>
+	
+	</audio>
+	<title>
+		Lask_LK's Github Page!
+	</title>
+	
+	
+	
+
+
+
+
+
 </html>
