--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<meta http-equiv="Content-Type" CONTENT="text/html; charset=UTF-8"/>
 <html>
 	<head> 
-	<title> Lask_LK ³¤Éú¾÷</title>
+	<title> Lask_LK é•¿ç”Ÿè¯€</title>
 	</head>
 	<audio autoplay accesskey="k" controls loop src="wtf.mp3">
 	
@@ -9,12 +10,4 @@
 	<title>
 		Lask_LK's Github Page!
 	</title>
-	
-	
-	
-
-
-
-
-
 </html>
